# farmsim-status-gui

./: .gitignore  README.md  app.py  config.example.yaml  create_venv.ps1  create_venv.sh  livemap_dynamic.xml  livemap_static.xml  pyproject.toml
www/: .gitignore  index.html  index.min.html  package-lock.json  package.json
www/css/: style.css  style.min.css
www/js/: overview.js  overview.min.js
www/project.inlang/: project_id
www/src/: app.html
www/src/components/: Navbar.svelte
www/src/lib/components/: Navbar.svelte
www/src/lib/components/farms/: farmDetails.svelte  farmStatistics.svelte
www/src/lib/components/map/: farmlandDetails.svelte
www/src/routes/: +layout.svelte  +page.svelte
www/src/routes/farms/: +page.svelte
www/src/routes/map/: +page.svelte
www/src/routes/players/: +page.svelte
www/src/static/data/: farms.json
www/static/css/: darkmode.css  style.css
www/static/data/: server.json
